<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".signin.SignIn">
    <data>
        <variable
            name="viewModel"
            type="com.wapp.factsapp.signin.SignInViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/blue_toolbar"
                android:fontFamily="@font/baloo"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/facebook_btn"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/facebook_color"
                android:fontFamily="@font/baloo"
                android:onClick="@{()->viewModel.onFacebookLoginClick()}"
                android:text="@string/facebook"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/google_btn"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/google_color"
                android:fontFamily="@font/baloo"
                android:onClick="@{()->viewModel.onGoogleLoginClick()}"
                android:text="@string/google"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebook_btn"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_border"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textColorHint="@color/blue_toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_edit"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edit_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/blue_toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_img"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anonymous_btn">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/blue_toolbar"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:onClick="@{()->viewModel.onSignUpClick()}"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/red"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/blue_header"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_btn"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="@{()->viewModel.onForgotPasswordClick()}"
                android:text="@string/forgot_password"
                android:textColor="@color/blue_header"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password_edit"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/sign_in_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_app_icon2"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/anonymous_btn"
                android:layout_width="275dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/anonymous_color"
                android:fontFamily="@font/baloo"
                android:onClick="@{() -> viewModel.onAnonymousClick()}"
                android:text="@string/anonymously"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</layout>
